opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_assert"
bug-reports: "https://github.com/janestreet/ppx_assert/issues"
dev-repo: "git+https://github.com/janestreet/ppx_assert.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_assert/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "5.1.0"}
  "base"          {= "v0.18~preview.130.55+197"}
  "ppx_cold"      {= "v0.18~preview.130.55+197"}
  "ppx_compare"   {= "v0.18~preview.130.55+197"}
  "ppx_here"      {= "v0.18~preview.130.55+197"}
  "ppx_sexp_conv" {= "v0.18~preview.130.55+197"}
  "ppx_template"  {= "v0.18~preview.130.55+197"}
  "dune"          {>= "3.17.0"}
  "ppxlib"        {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Assert-like extension nodes that raise useful errors on failure"
description: """
Part of the Jane Street's PPX rewriters collection.
"""
url {
  src:
    "https://github.com/janestreet/ppx_assert/archive/74551c3aeea77c12078c068f28f32e72f2c1b2f5.tar.gz"
  checksum:
    "sha256=d74ade59641e3a3a6e8fe5d555b727886e6700894a4ae929861d86452ead8aca"
}
