opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_debug_assert"
bug-reports: "https://github.com/janestreet/ppx_debug_assert/issues"
dev-repo: "git+https://github.com/janestreet/ppx_debug_assert.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_debug_assert/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"  {>= "5.2.0"}
  "dune"   {>= "3.17.0"}
  "ppxlib" {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Ppx for debug assertions"
description: """
A ppx rewriter for debug assertions.
"""
url {
  src:
    "https://github.com/janestreet/ppx_debug_assert/archive/99db83036000ae4386f745aa4f64823f172a2697.tar.gz"
  checksum:
    "sha256=8394cccfd7305455f6a6eb03397afc5b402f8b247a1125a1589a2fd3776c7707"
}
