opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_derive_at_runtime"
bug-reports: "https://github.com/janestreet/ppx_derive_at_runtime/issues"
dev-repo: "git+https://github.com/janestreet/ppx_derive_at_runtime.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_derive_at_runtime/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                    {>= "5.1.0"}
  "base"                     {= "v0.18~preview.130.55+197"}
  "expect_test_helpers_core" {= "v0.18~preview.130.55+197"}
  "ppx_helpers"              {= "v0.18~preview.130.55+197"}
  "ppx_jane"                 {= "v0.18~preview.130.55+197"}
  "ppxlib_jane"              {= "v0.18~preview.130.55+197"}
  "dune"                     {>= "3.17.0"}
  "ocaml-compiler-libs"      {= "v0.17.0+ox"}
  "ppxlib"                   {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Define a new ppx deriver by naming a runtime module."
description: """

Allows specifying new ppx derivers much more easily than writing
a ppx by hand. For example, to get `[@@deriving foo]`, you only have to
specify a module path such as `My_library.Foo`.
"""
url {
  src:
    "https://github.com/janestreet/ppx_derive_at_runtime/archive/909456f2be9cd75ddc2e3ae91ca8cbca7bf9b93c.tar.gz"
  checksum:
    "sha256=e361554cffe2cb8ad04b22623213d704dc42d2de2c3ad9e3ae8a3d09e95dc38a"
}
