opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_hash"
bug-reports: "https://github.com/janestreet/ppx_hash/issues"
dev-repo: "git+https://github.com/janestreet/ppx_hash.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_hash/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"               {>= "5.1.0"}
  "ppx_compare"         {= "v0.18~preview.130.55+197"}
  "ppx_helpers"         {= "v0.18~preview.130.55+197"}
  "ppx_sexp_conv"       {= "v0.18~preview.130.55+197"}
  "ppxlib_jane"         {= "v0.18~preview.130.55+197"}
  "dune"                {>= "3.17.0"}
  "ocaml-compiler-libs" {= "v0.17.0+ox"}
  "ppxlib"              {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "A ppx rewriter that generates hash functions from type expressions and definitions"
description: """
Part of the Jane Street's PPX rewriters collection.
"""
url {
  src:
    "https://github.com/janestreet/ppx_hash/archive/a96445f9170ec9c71725080752e5883906f25e00.tar.gz"
  checksum:
    "sha256=0335a6603e9ca4567b1677d95b4e5869510fb8a23de63e43e3a7463d898353f4"
}
