opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_html"
bug-reports: "https://github.com/janestreet/ppx_html/issues"
dev-repo: "git+https://github.com/janestreet/ppx_html.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_html/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                    {>= "5.1.0"}
  "base"                     {= "v0.18~preview.130.55+197"}
  "core"                     {= "v0.18~preview.130.55+197"}
  "core_kernel"              {= "v0.18~preview.130.55+197"}
  "expect_test_helpers_core" {= "v0.18~preview.130.55+197"}
  "expectable"               {= "v0.18~preview.130.55+197"}
  "patdiff"                  {= "v0.18~preview.130.55+197"}
  "ppx_css"                  {= "v0.18~preview.130.55+197"}
  "ppx_jane"                 {= "v0.18~preview.130.55+197"}
  "virtual_dom"              {= "v0.18~preview.130.55+197"}
  "angstrom"                 {>= "0.15.0"}
  "dune"                     {>= "3.17.0"}
  "ocaml-compiler-libs"      {= "v0.17.0+ox"}
  "ppxlib"                   {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "PPX_HTML is a way of constructing Vdom.Node.t's using HTML syntax."
description: """
PPX_HTML is a way of constructing Vdom.Node.t's using HTML syntax.
"""
url {
  src:
    "https://github.com/janestreet/ppx_html/archive/1e78ea9cd732d6c0cb6914a56a11114352f3f7bc.tar.gz"
  checksum:
    "sha256=1b7a13f86c5b8f1be62c7a6238d12d6ba73c0eb52dc50c210c29af31cdfa6494"
}
